k8s/windmill/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: windmill
  namespace: windmill
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: windmill.json-server.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: windmill-app
                port:
                  number: 8000
  tls:
    - secretName: windmill-tls
      hosts:
        - windmill.json-server.win
